Adding submit level dialog box to rate the game

--- a/flash/PipeJam3/html-template/index.template.html
+++ b/flash/PipeJam3/html-template/index.template.html
@@ -93,6 +93,11 @@
 				return document.cookie;
 			}
 			
+			function deleteCookie(name)
+			{
+			    document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+			}
+			
 
             // For version detection, set to min. required Flash Player version, or 0 (or 0.0.0), for no version detection. 
             var swfVersionStr = "11.1.0";
