Add a few fixes and organization changes to PL manual

--- a/java/manual/index.html
+++ b/java/manual/index.html
@@ -47,9 +47,13 @@
         <li><a href="#introduction">Classes</a></li>-->
         <li><a href="#subboardsAndMethods">Subboards and Methods</a></li>
            <ul class="nav nav-list">
-               <li><a href="#routingStrategy">Routing Strategies</a></li>
+               <li><a href="#routingStrategies">Routing Strategies</a></li>
            </ul>
-        <li><a href="#ifNodeTest">If Node Test</a></li>
+        <li><a href="#specialIntersections">Special Intersections</a>
+            <ul class="nav nav-list">
+                <li><a href="#ifNodeTest">If Node Test</a></li>
+            </ul>
+        </li>
     </ul>
 </section>
 
@@ -80,10 +84,10 @@
 
 <section id="subboardsAndMethods">
     <div class="page-header short" style="border-top: none;">
-        <h2>Method Calls and Subboards</h2>
+        <h2>Subboards and Methods</h2>
     </div>
 
-    <section id="routing">
+    <section id="routingStrategies">
         <div class="page-header short" style="border-top: none;">
             <h3>Routing Strategies</h3>
         </div>
@@ -102,8 +106,8 @@
         <div class="section-content bordered">
             <h4>Methods</h4>
             <p class="alert alert-info"><strong>Note:</strong> In both methods below, the declaration board for a method
-                will look the same AND the ball-size of each pipe connected to the board’s input will be dependent on
-                its pipe’s size.
+                will look the same AND the ball-size of each pipe connected to the board&#39;s input will be dependent on
+                its pipe&#39;s size.
             </p>
             <table class="three-column labeled table table-bordered">
                 <tr>
@@ -189,6 +193,17 @@
 
 </section>
 
+<section id="specialIntersections">
+    <div class="page-header short" style="border-top: none;">
+        <h2>Special Intersections</h2>
+    </div>
+
+    <section id="ifNodeTest">
+        <div class="page-header short" style="border-top: none;">
+            <h3>If Node Test</h3>
+        </div>
+
+    </section>
 
 
 </body>
